{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 951,
  "lineage": "5f443344-3a3f-bdd0-4279-6c7f9c625461",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "tw-alb01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:767453428914:loadbalancer/app/thought-works-demo/ffa58f4c07aa42e9",
            "arn_suffix": "app/thought-works-demo/ffa58f4c07aa42e9",
            "dns_name": "thought-works-demo-1426322085.us-west-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:767453428914:loadbalancer/app/thought-works-demo/ffa58f4c07aa42e9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "thought-works-demo",
            "security_groups": [
              "sg-018a0e4ae19a1f540"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b41ad31028b6faf4"
              },
              {
                "subnet_id": "subnet-0cfd084068e3d47e8"
              }
            ],
            "subnets": [
              "subnet-0b41ad31028b6faf4",
              "subnet-0cfd084068e3d47e8"
            ],
            "vpc_id": "vpc-0c97952f91644be60",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "depends_on": [
            "aws_security_group.tw-alb",
            "aws_subnet.tw-public-subnet",
            "aws_subnet.tw-public-subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:767453428914:listener/app/thought-works-demo/ffa58f4c07aa42e9/7dbf86502111da00",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:767453428914:targetgroup/tw-alb-target/80ecbcd2742339a4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:767453428914:listener/app/thought-works-demo/ffa58f4c07aa42e9/7dbf86502111da00",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:767453428914:loadbalancer/app/thought-works-demo/ffa58f4c07aa42e9",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.tw-alb01",
            "aws_alb_target_group.tw-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "tw-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:767453428914:targetgroup/tw-alb-target/80ecbcd2742339a4",
            "arn_suffix": "targetgroup/tw-alb-target/80ecbcd2742339a4",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/index.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:767453428914:targetgroup/tw-alb-target/80ecbcd2742339a4",
            "lambda_multi_value_headers_enabled": false,
            "name": "tw-alb-target",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c97952f91644be60"
          },
          "depends_on": [
            "aws_vpc.tw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "attach0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:767453428914:targetgroup/tw-alb-target/80ecbcd2742339a4-20190716171525651400000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:767453428914:targetgroup/tw-alb-target/80ecbcd2742339a4",
            "target_id": "i-04c5cee24ad9d5ff2"
          },
          "depends_on": [
            "aws_alb_target_group.tw-group",
            "aws_instance.web01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "attach1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:767453428914:targetgroup/tw-alb-target/80ecbcd2742339a4-20190716171525572600000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:767453428914:targetgroup/tw-alb-target/80ecbcd2742339a4",
            "target_id": "i-027a78193ae00198b"
          },
          "depends_on": [
            "aws_alb_target_group.tw-group",
            "aws_instance.web02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tweip-nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-046463a9acb69ddfb",
            "public_dns": "ec2-52-24-20-243.us-west-2.compute.amazonaws.com",
            "public_ip": "52.24.20.243",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-082b5a644766e0e6f",
            "arn": "arn:aws:ec2:us-west-2:767453428914:instance/i-0c6d566532650463e",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0c6d566532650463e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sidharth",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ef84a8b9594199cd",
            "private_dns": "ip-20-0-2-22.us-west-2.compute.internal",
            "private_ip": "20.0.2.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0a83dfb3d423b80a4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0cfec63d85a9990cb",
            "tags": {
              "Name": "DB Server 1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-084113fe5bb4f93fe"
            ]
          },
          "depends_on": [
            "aws_security_group.db",
            "aws_subnet.tw-private-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-082b5a644766e0e6f",
            "arn": "arn:aws:ec2:us-west-2:767453428914:instance/i-04c5cee24ad9d5ff2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-04c5cee24ad9d5ff2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sidharth",
            "monitoring": false,
            "primary_network_interface_id": "eni-04b8f7f1831fb3cbe",
            "private_dns": "ip-20-0-1-57.us-west-2.compute.internal",
            "private_ip": "20.0.1.57",
            "public_ip": "34.222.151.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-09e67c0104fe5ee4e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0b41ad31028b6faf4",
            "tags": {
              "Name": "WebServer01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04563237d207f5ad4"
            ]
          },
          "depends_on": [
            "aws_security_group.sgweb",
            "aws_subnet.tw-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-082b5a644766e0e6f",
            "arn": "arn:aws:ec2:us-west-2:767453428914:instance/i-027a78193ae00198b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-027a78193ae00198b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sidharth",
            "monitoring": false,
            "primary_network_interface_id": "eni-0d7b04ef1e9bf677e",
            "private_dns": "ip-20-0-3-121.us-west-2.compute.internal",
            "private_ip": "20.0.3.121",
            "public_ip": "52.24.240.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0b2091f41ee2d2f4f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0cfd084068e3d47e8",
            "tags": {
              "Name": "WebServer02"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04563237d207f5ad4"
            ]
          },
          "depends_on": [
            "aws_security_group.sgweb",
            "aws_subnet.tw-public-subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tw-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-039226b6d31b2e904",
            "owner_id": "767453428914",
            "tags": {
              "Name": "tw-igw"
            },
            "vpc_id": "vpc-0c97952f91644be60"
          },
          "depends_on": [
            "aws_vpc.tw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-046463a9acb69ddfb",
            "id": "nat-01ababe5eeae77c53",
            "network_interface_id": "eni-07b355d91a3fd65b3",
            "private_ip": "20.0.1.238",
            "public_ip": "52.24.20.243",
            "subnet_id": "subnet-0b41ad31028b6faf4"
          },
          "depends_on": [
            "aws_eip.tweip-nat",
            "aws_subnet.tw-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-039226b6d31b2e904",
            "id": "r-rtb-070a89e42e8a611381080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-070a89e42e8a61138",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.tw-igw",
            "aws_vpc.tw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tw-private_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cefc943245769ee7",
            "owner_id": "767453428914",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01ababe5eeae77c53",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0c97952f91644be60"
          },
          "depends_on": [
            "aws_nat_gateway.gw",
            "aws_vpc.tw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f47da0f99c18ce61",
            "route_table_id": "rtb-0cefc943245769ee7",
            "subnet_id": "subnet-0cfec63d85a9990cb"
          },
          "depends_on": [
            "aws_route_table.tw-private_route_table",
            "aws_subnet.tw-private-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767453428914:security-group/sg-09ce29827900c4a07",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ce29827900c4a07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "767453428914",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c97952f91644be60"
          },
          "depends_on": [
            "aws_vpc.tw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767453428914:security-group/sg-084113fe5bb4f93fe",
            "description": "Allow incoming database connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-084113fe5bb4f93fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04563237d207f5ad4"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_db",
            "name_prefix": null,
            "owner_id": "767453428914",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DBServerSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c97952f91644be60"
          },
          "depends_on": [
            "aws_security_group.sgweb",
            "aws_vpc.tw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgweb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767453428914:security-group/sg-04563237d207f5ad4",
            "description": "Allow inbound connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04563237d207f5ad4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sgweb",
            "name_prefix": null,
            "owner_id": "767453428914",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebServerSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c97952f91644be60"
          },
          "depends_on": [
            "aws_vpc.tw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tw-alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767453428914:security-group/sg-018a0e4ae19a1f540",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018a0e4ae19a1f540",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tw-alb",
            "name_prefix": null,
            "owner_id": "767453428914",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c97952f91644be60"
          },
          "depends_on": [
            "aws_vpc.tw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tw-private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767453428914:subnet/subnet-0cfec63d85a9990cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "20.0.2.0/24",
            "id": "subnet-0cfec63d85a9990cb",
            "map_public_ip_on_launch": false,
            "owner_id": "767453428914",
            "tags": {
              "Name": "tw-private"
            },
            "vpc_id": "vpc-0c97952f91644be60"
          },
          "depends_on": [
            "aws_vpc.tw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tw-public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767453428914:subnet/subnet-0b41ad31028b6faf4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "20.0.1.0/24",
            "id": "subnet-0b41ad31028b6faf4",
            "map_public_ip_on_launch": false,
            "owner_id": "767453428914",
            "tags": {
              "Name": "tw-public"
            },
            "vpc_id": "vpc-0c97952f91644be60"
          },
          "depends_on": [
            "aws_vpc.tw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tw-public-subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767453428914:subnet/subnet-0cfd084068e3d47e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "20.0.3.0/24",
            "id": "subnet-0cfd084068e3d47e8",
            "map_public_ip_on_launch": false,
            "owner_id": "767453428914",
            "tags": {
              "Name": "tw-public"
            },
            "vpc_id": "vpc-0c97952f91644be60"
          },
          "depends_on": [
            "aws_vpc.tw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tw-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767453428914:vpc/vpc-0c97952f91644be60",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-080d3df6f377e3206",
            "default_route_table_id": "rtb-070a89e42e8a61138",
            "default_security_group_id": "sg-01077f3998b935b21",
            "dhcp_options_id": "dopt-4b44e133",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c97952f91644be60",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-070a89e42e8a61138",
            "owner_id": "767453428914",
            "tags": {
              "Name": "tw-vpc"
            }
          }
        }
      ]
    }
  ]
}